[tool.poetry]
name = "varys"
version = "0.1.0"
description = ""
authors = ["Kevin Yu <kevin@emotive.io>"]

[tool.poetry.dependencies]
python = "~3.8"
elasticsearch = "^7.14.0"
elasticsearch-dsl = "^7.4.0"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
